# Cylindrical-Slicer

./: README.md
C/: CMakeLists.txt  readme.MD
C-version/Slicer/: CMakeLists.txt  README.md  makefile
C-version/Slicer/include/: camera.h  engine.h  graphics.h  object.h  shader.h  window.h
C-version/Slicer/shaders/: fShader.txt  vShader.txt
C-version/Slicer/src/: engine.cpp  graphics.cpp  main.cpp  object.cpp  shader.cpp
C/gl/: gl.qrc.depends
C/gl_files/: bed.stl  gl.qrc.depends  license
C/qt/: slicer.pro
C/src/: Geometry.cpp  Geometry.h  ModelPrint.cpp  ModelPrint.h  PrintParameters.h  Vector.cpp  Vector.h  app.cpp  app.h  background.cpp  background.h  canvas.cpp  canvas.h  glmesh.h  gui.cpp  gui.h  intersectionPoint.cpp  intersectionPoint.h  loader.cpp  loader.h  main.cpp  mesh.cpp  mesh.h  parser.cpp  parser.h  printParameters.h  renderer.cpp  renderer.h  unitTests.cpp  vec3.h  vector3.h  vertex.h  window.cpp  window.h
py/src/: gui.py  objloader.py
src/: gui.py  objloader.py  objviewer.py
